# Machine-Learning-for-Particle-Physics-Classification

./: .gitignore  INDEX.ipynb  INDEX.md  README.md  README_old.md  dir_remover.py  generate_index.py  hello.py  pyproject.toml  requirements.txt  zip_dir.py
BDT/: 1_ax45_only2bj_only1p_BDT.ipynb  2_ax15_BDT.ipynb  2_ax15_only2bj_only1p_BDT.ipynb  3_ax75_only2bj_only1p_BDT.ipynb  4_ax75_UnderSampling_BDT.ipynb  BDT.ipynb  SVM_Classifier.ipynb  ax45_BDT.ipynb  helper_function_module_BDT.py
BDT/BDT_Old_Preprocessing/: 0_preprocessing.ipynb  1_invMass_deltaR_processing.ipynb  2_ax15_BDT_old.ipynb
BDT/DifferentAxionMass/: 0_preprocessing.ipynb  1_invMass_deltaR_processing.ipynb  2_ax15_BDT.ipynb  2_ax75_BDT.ipynb
BDT/data/: background_bdt.txt  background_bdt_corr.txt  signal_bdt.txt  signal_bdt_1.txt
BDT/minpt10/: 1_ax45minpt10_onlyAny2bj_onlyAny1p_BDT.ipynb  1_ax45minpt10_onlyFirst2bj_onlyFirst1p_BDT.ipynb  2_ax15minpt10_onlyAny2bj_onlyAny1p_BDT.ipynb  2_ax15minpt10_onlyFirst2bj_onlyFirst1p_BDT.ipynb  helper_function_module_BDT.py
BDT/minpt20/: 1_ax45minpt20_onlyAny2bj_onlyAny1p_BDT.ipynb  1_ax45minpt20_onlyFirst2bj_onlyFirst1p_BDT.ipynb  2_ax15minpt20_onlyAny2bj_onlyAny1p_BDT.ipynb  2_ax15minpt20_onlyFirst2bj_onlyFirst1p_BDT.ipynb
EFlow Images/AlexNet/: AlexNet_Complete-Copy1.ipynb  y_pred.npy  (+5 more)
GNN/: 4j1p_NNConv_EtaPhiPtE.ipynb  deltaR_Distribution.ipynb  scratch.ipynb
Preprocessing Eflow Images/: Transformation.py  dataset1_code.ipynb
txt_data_preprocess/: GNN_dataPrep_rawTXT_to_eventJSON.ipynb  etaBound_atleastORonly2bj_only1p_rawTxtData_filtering.ipynb
(+205 files in other folders)
